Continued work on Jupyter Notebook

--- a/HeroesOfPymoli/hop_pandas.ipynb
+++ b/HeroesOfPymoli/hop_pandas.ipynb
@@ -10,7 +10,7 @@
     "import pandas as pd\n",
     "\n",
     "# File to Load (Remember to Change These)\n",
-    "file_to_load = \"HeroesOfPymoli/purchase_data.csv\"\n",
+    "file_to_load = \"purchase_data.csv\"\n",
     "\n",
     "# Read Purchasing File and store into Pandas data frame\n",
     "purchase_data = pd.read_csv(file_to_load)"
@@ -132,6 +132,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TOTAL PLAYERS"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -145,12 +152,17 @@
     }
    ],
    "source": [
-    "# TOTAL PLAYERS\n",
-    "\n",
     "# Print total number of players\n",
     "tot_players = purchase_data['SN'].nunique()\n",
     "\n",
     "print('Total Players: ', tot_players)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PURCHASING ANALYSIS (TOTAL)"
    ]
   },
   {
@@ -167,8 +179,6 @@
     }
    ],
    "source": [
-    "# PURCHASING ANALYSIS (TOTAL)\n",
-    "\n",
     "# Print total number of unique items\n",
     "unique_items = purchase_data['Item Name'].nunique()\n",
     "\n",
@@ -177,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +296,7 @@
        "0            576           179         $3.05              780      $2379.77"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,13 +316,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# GENDER DEMOGRAPHICS"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# GENDER DEMOGRAPHICS\n",
-    "\n",
     "# Drop duplicates in SN column to get total unique users\n",
     "pur_data_no_dups = purchase_data.drop_duplicates('SN')"
    ]
@@ -539,8 +554,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PURCHASING ANALYSIS (GENDER)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Filter Dataset by Gender"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -644,14 +673,12 @@
        "4                                       Fury   1.44  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# PURCHASING ANALYSIS (GENDER)\n",
-    "\n",
     "# Filter dataset by male purchases\n",
     "male_pur_df = purchase_data.loc[purchase_data['Gender'] == 'Male', :]\n",
     "\n",
@@ -660,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +791,7 @@
        "55                    Arcane Gem   3.79  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -778,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -882,7 +909,7 @@
        "228                     Dreamsong   3.39  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -895,224 +922,254 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 32,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "652"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "# Male purchase count\n",
-    "male_purchase_count = len(male_pur_df)\n",
-    "\n",
-    "male_purchase_count"
+    "## GroupBy Gender"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "113"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Female purchase count\n",
-    "female_purchase_count = len(female_pur_df)\n",
-    "\n",
-    "female_purchase_count"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "15"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Other purchase count\n",
-    "other_purchase_count = len(other_pur_df)\n",
-    "\n",
-    "other_purchase_count"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'$3.02'"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Average male purchase price, formatted\n",
-    "male_mean_pur = '${:.2f}'.format(male_pur_df['Price'].mean())\n",
-    "\n",
-    "male_mean_pur"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'$3.20'"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Average female purchase price, formatted\n",
-    "female_mean_pur = '${:.2f}'.format(female_pur_df['Price'].mean())\n",
-    "\n",
-    "female_mean_pur"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'$3.35'"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Average other/non-disclosed purchase price, formatted\n",
-    "other_mean_pur = '${:.2f}'.format(other_pur_df['Price'].mean())\n",
-    "\n",
-    "other_mean_pur"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'$1967.64'"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Total male purchase value, formatted\n",
-    "male_tot_pur = '${:.2f}'.format(male_pur_df['Price'].sum())\n",
-    "\n",
-    "male_tot_pur"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'$361.94'"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Total female purchase value, formatted\n",
-    "female_tot_pur = '${:.2f}'.format(female_pur_df['Price'].sum())\n",
-    "\n",
-    "female_tot_pur"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'$50.19'"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Total other/non-disclosed purchase value, formatted\n",
-    "other_tot_pur = '${:.2f}'.format(other_pur_df['Price'].sum())\n",
-    "\n",
-    "other_tot_pur"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Average total purchase per individual male player\n"
+    "# Using GroupBy in order to separate the data into fields based on \"Gender\" values\n",
+    "grouped_pur_gender = purchase_data.groupby(['Gender'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Purchase Count by Gender"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Gender\n",
+       "Female                   113\n",
+       "Male                     652\n",
+       "Other / Non-Disclosed     15\n",
+       "Name: Purchase ID, dtype: int64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Purchase count by gender\n",
+    "gender_count = grouped_pur_gender['Purchase ID'].count()\n",
+    "gender_count"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Average Purchase Price by Gender"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Gender\n",
+       "Female                   3.20\n",
+       "Male                     3.02\n",
+       "Other / Non-Disclosed    3.35\n",
+       "Name: Price, dtype: float64"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Average purchase price by gender\n",
+    "avg_price = grouped_pur_gender['Price'].mean()\n",
+    "avg_price_neat = avg_price.round(decimals=2)\n",
+    "avg_price_neat"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Total purchase value by gender"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Gender\n",
+       "Female                    361.94\n",
+       "Male                     1967.64\n",
+       "Other / Non-Disclosed      50.19\n",
+       "Name: Price, dtype: float64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Total purchase value by gender\n",
+    "tot_value = grouped_pur_gender['Price'].sum()\n",
+    "tot_value_neat = tot_value.round(decimals=2)\n",
+    "tot_value_neat"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Average total purchase per person by gender"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Male"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'4.07'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Average total purchase per person by gender\n",
+    "# Male\n",
+    "# Using GroupBy in order to separate the data into fields based on \"SN\" values\n",
+    "grouped_SN_male = male_pur_df.groupby(['SN'])\n",
+    "\n",
+    "male_sum = grouped_SN_male['Price'].sum()\n",
+    "\n",
+    "male_mean = male_sum.mean()\n",
+    "\n",
+    "male_mean_neat = '{:.2f}'.format(male_mean)\n",
+    "\n",
+    "male_mean_neat"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Female"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'4.47'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Average total purchase per person by gender\n",
+    "# Female\n",
+    "# Using GroupBy in order to separate the data into fields based on \"SN\" values\n",
+    "grouped_SN_female = female_pur_df.groupby(['SN'])\n",
+    "\n",
+    "female_sum = grouped_SN_female['Price'].sum()\n",
+    "\n",
+    "female_mean = female_sum.mean()\n",
+    "\n",
+    "female_mean_neat = '{:.2f}'.format(female_mean)\n",
+    "\n",
+    "female_mean_neat"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Other/Non-Disclosed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'4.56'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Average total purchase per person by gender\n",
+    "# Other/Non-disclosed\n",
+    "# Using GroupBy in order to separate the data into fields based on \"SN\" values\n",
+    "grouped_SN_other = other_pur_df.groupby(['SN'])\n",
+    "\n",
+    "other_sum = grouped_SN_other['Price'].sum()\n",
+    "\n",
+    "other_mean = other_sum.mean()\n",
+    "\n",
+    "other_mean_neat = '{:.2f}'.format(other_mean)\n",
+    "\n",
+    "other_mean_neat"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create/Display Summary Data Frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1136,119 +1193,150 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Purchase ID</th>\n",
-       "      <th>SN</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Item ID</th>\n",
-       "      <th>Item Name</th>\n",
-       "      <th>Price</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Gender</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
+       "      <th>Purchase Count</th>\n",
+       "      <th>Average Purchase Price ($)</th>\n",
+       "      <th>Total Purchase Value ($)</th>\n",
+       "      <th>Avg Total Purchase per Person ($)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Female</th>\n",
        "      <td>113</td>\n",
-       "      <td>113</td>\n",
-       "      <td>113</td>\n",
-       "      <td>113</td>\n",
-       "      <td>113</td>\n",
-       "      <td>113</td>\n",
+       "      <td>3.20</td>\n",
+       "      <td>361.94</td>\n",
+       "      <td>4.47</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Male</th>\n",
        "      <td>652</td>\n",
-       "      <td>652</td>\n",
-       "      <td>652</td>\n",
-       "      <td>652</td>\n",
-       "      <td>652</td>\n",
-       "      <td>652</td>\n",
+       "      <td>3.02</td>\n",
+       "      <td>1967.64</td>\n",
+       "      <td>4.07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Other / Non-Disclosed</th>\n",
        "      <td>15</td>\n",
-       "      <td>15</td>\n",
-       "      <td>15</td>\n",
-       "      <td>15</td>\n",
-       "      <td>15</td>\n",
-       "      <td>15</td>\n",
+       "      <td>3.35</td>\n",
+       "      <td>50.19</td>\n",
+       "      <td>4.56</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                       Purchase ID   SN  Age  Item ID  Item Name  Price\n",
-       "Gender                                                                 \n",
-       "Female                         113  113  113      113        113    113\n",
-       "Male                           652  652  652      652        652    652\n",
-       "Other / Non-Disclosed           15   15   15       15         15     15"
+       "                       Purchase Count  Average Purchase Price ($)  \\\n",
+       "Female                            113                        3.20   \n",
+       "Male                              652                        3.02   \n",
+       "Other / Non-Disclosed              15                        3.35   \n",
+       "\n",
+       "                       Total Purchase Value ($)  \\\n",
+       "Female                                   361.94   \n",
+       "Male                                    1967.64   \n",
+       "Other / Non-Disclosed                     50.19   \n",
+       "\n",
+       "                      Avg Total Purchase per Person ($)  \n",
+       "Female                                             4.47  \n",
+       "Male                                               4.07  \n",
+       "Other / Non-Disclosed                              4.56  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Using GroupBy in order to separate the data into fields according to \"state\" values\n",
-    "grouped_pur_df = purchase_data.groupby(['Gender'])\n",
+    "# Create/display gender purchase analysis data frame\n",
+    "gender_analysis_df = pd.DataFrame(\n",
+    "                        {'Purchase Count' : [gender_count['Female'], gender_count['Male'], gender_count['Other / Non-Disclosed']],\n",
+    "                        'Average Purchase Price ($)' : [avg_price_neat['Female'], avg_price_neat['Male'], avg_price_neat['Other / Non-Disclosed']],\n",
+    "                        'Total Purchase Value ($)' : [tot_value_neat['Female'], tot_value_neat['Male'], tot_value_neat['Other / Non-Disclosed']],\n",
+    "                        'Avg Total Purchase per Person ($)' : [female_mean_neat, male_mean_neat, other_mean_neat]\n",
+    "                        },\n",
+    "                        index = ['Female', 'Male', 'Other / Non-Disclosed']\n",
+    "                                )\n",
     "\n",
-    "grouped_pur_df.count().head()"
+    "gender_analysis_df"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# AGE DEMOGRAPHICS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# PURCHASING ANALYSIS (AGE)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# TOP SPENDERS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# MOST POPULAR ITEMS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# MOST PROFITABLE ITEMS"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
