Continued work on Jupyter Notebook

--- a/HeroesOfPymoli/hop_pandas.ipynb
+++ b/HeroesOfPymoli/hop_pandas.ipynb
@@ -333,6 +333,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Male"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -379,6 +386,13 @@
     "male_pct = '{:.2f}%'.format(male_prop * 100)\n",
     "\n",
     "male_pct"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Female"
    ]
   },
   {
@@ -431,6 +445,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Other/Non-Disclosed"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -477,6 +498,13 @@
     "other_pct = '{:.2f}%'.format(other_prop * 100)\n",
     "\n",
     "other_pct"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary Data Frame"
    ]
   },
   {
@@ -1164,7 +1192,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create/Display Summary Data Frame"
+    "## Summary Data Frame"
    ]
   },
   {
